<resources>
    <string name="app_name">Mobile_application</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Settings</string>
    <string name="pt_lapiso">PT.LAPISO</string>
    <string name="your_last_clocking_was_30_minutes_ago">Your last clocking was 30 minutes ago</string>
    <string name="working_hours">Working Hours</string>
    <string name="_5_0">5.0</string>
    <string name="_40_00">40.00</string>
    <string name="september_2021">September 2021</string>
    <string name="hours">Hours</string>
    <string name="leave_balance">Leave Balance</string>
    <string name="days">Days</string>
    <string name="at">AT</string>
    <string name="_18_00">18:00</string>
    <string name="p_m">P.M</string>
    <string name="clocking">Clocking</string>
    <string name="todo1">TODO</string>
    <string name="menu">Menu</string>
    <string name="new_leave">New Leave</string>
    <string name="leave_request">Leave Request</string>
    <string name="todo2">TODO</string>
    <string name="overtime">Overtime</string>
    <string name="todo3">TODO</string>
    <string name="profile">PROFILE</string>
    <string name="personal_data">Personal Data</string>
    <string name="update_password">Update Password</string>
    <string name="logout">Logout</string>
    <string name="avatar">AVATAR</string>
    <string name="birth_date">Birth Date</string>
    <string name="company">Company</string>
    <string name="division">Division</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="title_activity_clocking">ClockingActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="roland_garros_paris">Roland Garros Paris</string>
    <string name="Clocking" />
</resources>