<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".ui.home.HomeFragment">


    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="54dp"
        android:layout_marginTop="27dp"
        android:text="@string/pt_lapiso"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/your_last_clocking_was_30_minutes_ago"
        android:textColor="#000000"
        android:textSize="10sp"
        app:layout_constraintBottom_toTopOf="@+id/textView6"
        app:layout_constraintEnd_toEndOf="@+id/divider9"
        app:layout_constraintStart_toStartOf="@+id/divider9"
        tools:ignore="SmallSp" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="31dp"
        android:text="@string/leave_balance"
        android:textColor="#000000"
        android:textSize="10sp"
        app:layout_constraintStart_toStartOf="@+id/textView9"
        app:layout_constraintTop_toBottomOf="@+id/divider11"
        tools:ignore="MissingConstraints,SmallSp" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="13dp"
        android:text="@string/days"
        android:textColor="#000000"
        android:textSize="12sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView9"
        app:layout_constraintEnd_toStartOf="@+id/textView5"
        app:layout_constraintStart_toEndOf="@+id/textView9"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:layout_marginEnd="14dp"
        android:text="@string/_5_0"
        android:textColor="#000000"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/textView10"
        app:layout_constraintStart_toEndOf="@+id/divider5"
        app:layout_constraintTop_toBottomOf="@+id/textView8"
        tools:ignore="MissingConstraints" />


    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="@string/_18_00"
        android:textColor="#000000"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView5"
        app:layout_constraintEnd_toStartOf="@+id/textView7"
        app:layout_constraintStart_toEndOf="@+id/textView5"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="18dp"
        android:layout_height="17dp"
        android:layout_marginTop="39dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="41dp"
        android:text="@string/at"
        android:textColor="#000000"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@+id/button2"
        app:layout_constraintEnd_toStartOf="@+id/textView6"
        app:layout_constraintStart_toEndOf="@+id/textView10"
        app:layout_constraintTop_toTopOf="@+id/divider9"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/p_m"
        android:textColor="#000000"
        android:textSize="12sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView6"
        app:layout_constraintEnd_toStartOf="@+id/textView13"
        app:layout_constraintStart_toEndOf="@+id/textView6"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/button2"
        android:layout_width="93dp"
        android:layout_height="29dp"
        android:layout_marginTop="48dp"
        android:layout_marginBottom="47dp"
        android:background="@drawable/custom_button"
        android:backgroundTint="#F2600F"
        android:text="@string/clocking"
        android:textColor="@color/white"
        android:textSize="8sp"
        app:layout_constraintBottom_toBottomOf="@+id/textView12"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.506"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView4"
        app:layout_constraintVertical_bias="0.29"
        app:rippleColor="#F2600F"
        tools:ignore="SmallSp" />


    <View
        android:id="@+id/divider9"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginStart="29dp"
        android:layout_marginEnd="29dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteY="93dp" />

    <View
        android:id="@+id/divider10"
        android:layout_width="350dp"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintBottom_toBottomOf="@+id/divider5"
        app:layout_constraintEnd_toStartOf="@+id/divider8"
        app:layout_constraintStart_toStartOf="@+id/divider8"
        app:layout_constraintTop_toBottomOf="@+id/divider5"
        tools:ignore="MissingConstraints" />

    <View
        android:id="@+id/divider11"
        android:layout_width="350dp"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintBottom_toTopOf="@+id/divider8"
        app:layout_constraintEnd_toStartOf="@+id/divider8"
        app:layout_constraintStart_toStartOf="@+id/divider8"
        app:layout_constraintTop_toTopOf="@+id/divider8"
        tools:ignore="MissingConstraints" />

    <View
        android:id="@+id/divider5"
        android:layout_width="0dp"
        android:layout_height="225dp"
        android:layout_marginStart="29dp"
        android:layout_marginEnd="54dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintBottom_toTopOf="@+id/divider11"
        app:layout_constraintEnd_toStartOf="@+id/textView9"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/divider11"
        tools:ignore="MissingConstraints" />

    <View
        android:id="@+id/divider8"
        android:layout_width="1dp"
        android:layout_height="115dp"
        android:layout_marginTop="15dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button2"
        tools:ignore="MissingConstraints" />

    <View
        android:id="@+id/divider4"
        android:layout_width="1dp"
        android:layout_height="227dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.924"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteY="94dp" />

    <View
        android:id="@+id/divider"
        android:layout_width="1dp"
        android:layout_height="227dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.065"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteY="93dp" />

    <View
        android:id="@+id/divider6"
        android:layout_width="0dp"
        android:layout_height="225dp"
        android:layout_marginEnd="32dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintBottom_toBottomOf="@+id/divider11"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView14"
        app:layout_constraintTop_toBottomOf="@+id/divider11"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginBottom="199dp"
        android:text="@string/working_hours"
        android:textColor="#000000"
        android:textSize="10sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView2"
        app:layout_constraintEnd_toEndOf="@+id/textView14"
        app:layout_constraintStart_toStartOf="@+id/textView13"
        app:layout_constraintTop_toBottomOf="@+id/textView6"
        tools:ignore="MissingConstraints,SmallSp" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="10dp"
        android:text="@string/_40_00"
        android:textColor="#000000"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/textView14"
        app:layout_constraintStart_toEndOf="@+id/textView7"
        app:layout_constraintTop_toBottomOf="@+id/textView12"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="9dp"
        android:text="@string/september_2021"
        android:textColor="#000000"
        android:textSize="6sp"
        app:layout_constraintEnd_toEndOf="@+id/textView11"
        app:layout_constraintTop_toBottomOf="@+id/textView11"
        tools:ignore="MissingConstraints,SmallSp" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="45dp"
        android:text="@string/hours"
        android:textColor="#000000"
        android:textSize="12sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView13"
        app:layout_constraintEnd_toStartOf="@+id/divider6"
        app:layout_constraintStart_toEndOf="@+id/textView13"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="104dp"
        android:text="@string/menu"
        android:textColor="#000000"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/textView3"
        app:layout_constraintStart_toStartOf="@+id/divider5"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="29dp"
        android:text="@string/new_leave"
        android:textColor="#000000"
        android:textSize="10sp"
        app:layout_constraintBottom_toBottomOf="@+id/divider2"
        app:layout_constraintEnd_toStartOf="@+id/divider2"
        app:layout_constraintStart_toEndOf="@+id/divider3"
        app:layout_constraintTop_toBottomOf="@+id/imageView4"
        app:layout_constraintVertical_bias="0.23"
        tools:ignore="MissingConstraints,SmallSp" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="56dp"
        android:src="@drawable/schedule_1"
        app:layout_constraintBottom_toTopOf="@+id/textView16"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/divider2"
        app:layout_constraintTop_toTopOf="@+id/divider2"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="ContentDescription,MissingConstraints" />

    <View
        android:id="@+id/divider2"
        android:layout_width="1dp"
        android:layout_height="0dp"
        android:layout_marginEnd="15dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintBottom_toBottomOf="@+id/divider3"
        app:layout_constraintEnd_toStartOf="@+id/imageView2"
        app:layout_constraintStart_toEndOf="@+id/textView15"
        app:layout_constraintTop_toTopOf="@+id/imageView4"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="63dp"
        android:layout_marginTop="22dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="15dp"
        android:src="@drawable/file_1"
        app:layout_constraintBottom_toBottomOf="@+id/textView3"
        app:layout_constraintEnd_toStartOf="@+id/divider3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintVertical_bias="1.0"
        tools:ignore="ContentDescription,MissingConstraints" />

    <View
        android:id="@+id/divider3"
        android:layout_width="1dp"
        android:layout_height="0dp"
        android:layout_marginEnd="35dp"
        android:layout_marginBottom="1dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintBottom_toBottomOf="@+id/textView3"
        app:layout_constraintEnd_toStartOf="@+id/textView15"
        app:layout_constraintStart_toEndOf="@+id/imageView3"
        app:layout_constraintTop_toTopOf="@+id/imageView4"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="208dp"
        android:text="@string/leave_request"
        android:textColor="#000000"
        android:textSize="10sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/divider3"
        app:layout_constraintHorizontal_bias="0.23"
        app:layout_constraintStart_toStartOf="@+id/imageView3"
        tools:ignore="SmallSp" />

    <TextView
        android:id="@+id/textView16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="224dp"
        android:text="@string/overtime"
        android:textColor="#000000"
        android:textSize="10sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/imageView2"
        app:layout_constraintStart_toStartOf="@+id/imageView2"
        tools:ignore="MissingConstraints,SmallSp" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="69dp"
        android:layout_height="58dp"
        android:layout_marginTop="7dp"
        android:layout_marginBottom="7dp"
        android:contentDescription="TODO"
        android:src="@drawable/important_1"
        app:layout_constraintBottom_toTopOf="@+id/textView16"
        app:layout_constraintEnd_toEndOf="@+id/divider2"
        app:layout_constraintHorizontal_bias="0.577"
        app:layout_constraintStart_toEndOf="@+id/divider3"
        app:layout_constraintTop_toTopOf="@+id/imageView3"
        app:layout_constraintVertical_bias="1.0"
        tools:ignore="ContentDescription,HardcodedText,MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>