<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.settings.SettingsFragment">

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/nav_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="?android:attr/windowBackground"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:menu="@menu/bottom_nav_menu" />

    <Button
        android:id="@+id/btnLogOut"
        android:layout_width="413dp"
        android:layout_height="48dp"
        android:text="@string/logout"
        app:icon="@android:drawable/ic_lock_power_off"
        app:iconPadding="0dp"
        app:iconTint="#FFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider26" />

    <View
        android:id="@+id/divider26"
        android:layout_width="409dp"
        android:layout_height="1dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="1dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnUpdatePassword" />

    <View
        android:id="@+id/divider25"
        android:layout_width="409dp"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnUpdatePassword" />

    <Button
        android:id="@+id/btnUpdatePassword"
        android:layout_width="413dp"
        android:layout_height="48dp"
        android:text="@string/update_password"
        app:icon="@drawable/reset_password_removebg_preview"
        app:iconPadding="0dp"
        app:iconSize="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnOpenPersonalData" />

    <Button
        android:id="@+id/btnOpenPersonalData"
        android:layout_width="413dp"
        android:layout_height="48dp"
        android:text="@string/personal_data"
        app:icon="@drawable/user_icon"
        app:iconPadding="0dp"
        app:iconSize="30dp"
        app:iconTint="@android:color/white"
        app:iconTintMode="src_atop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider24" />

    <TextView
        android:id="@+id/textView24"
        android:layout_width="156dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/profile"
        app:layout_constraintBottom_toTopOf="@+id/divider24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider23" />

    <View
        android:id="@+id/divider24"
        android:layout_width="409dp"
        android:layout_height="1dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="1dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider23" />

    <View
        android:id="@+id/divider23"
        android:layout_width="409dp"
        android:layout_height="1dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="1dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView8" />

    <ImageView
        android:id="@+id/imageView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:contentDescription="@string/avatar"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ImageContrastCheck"
        android:src="@drawable/user_icon" />

</androidx.constraintlayout.widget.ConstraintLayout>