<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.settings.PersonalDataFragment" >

    <TextView
        android:id="@+id/textView27"
        android:layout_width="345dp"
        android:layout_height="18dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="472dp"
        android:text="@string/profile_picture"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView26"
        android:layout_width="345dp"
        android:layout_height="18dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="384dp"
        android:text="@string/division"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextTextPassword7"
        android:layout_width="346dp"
        android:layout_height="48dp"
        android:ems="10"
        android:inputType="textPassword"
        android:textColor="#AAA8A8"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.246"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.59"
        tools:ignore="SpeakableTextPresentCheck" />

    <EditText
        android:id="@+id/editTextTextPassword6"
        android:layout_width="346dp"
        android:layout_height="48dp"
        android:ems="10"
        android:inputType="textPassword"
        android:textColor="#AAA8A8"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.246"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.465"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/textView25"
        android:layout_width="345dp"
        android:layout_height="18dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="300dp"
        android:text="@string/company"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextTextPassword5"
        android:layout_width="346dp"
        android:layout_height="48dp"
        android:ems="10"
        android:inputType="textPassword"
        android:textColor="#AAA8A8"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.246"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.342"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/textView23"
        android:layout_width="345dp"
        android:layout_height="18dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="216dp"
        android:text="@string/birth_date"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextTextPassword4"
        android:layout_width="346dp"
        android:layout_height="48dp"
        android:ems="10"
        android:inputType="textPassword"
        android:textColor="#AAA8A8"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.246"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.223"
        tools:ignore="SpeakableTextPresentCheck" />

    <Button
        android:id="@+id/button3"
        android:layout_width="50dp"
        android:layout_height="53dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/white"
        app:icon="@drawable/icons8_chevron_left_30"
        app:iconPadding="0dp"
        app:iconTint="#000000"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:strokeColor="@color/white"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/textView21"
        android:layout_width="256dp"
        android:layout_height="30dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="96dp"
        android:text="@string/personal_data"
        android:textColor="#000000"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView22"
        android:layout_width="345dp"
        android:layout_height="18dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="136dp"
        android:text="Name"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="512dp"
        android:text="Change"
        app:icon="@android:drawable/ic_input_add"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>